<resources>
    <string name="app_name">MetaPebble</string>

    <string name="server_error">Server error</string>
    <string name="request_not_exist">Request address does not exist</string>
    <string name="request_redirected">Request redirected</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="network_timeout">Network timeout</string>
    <string name="data_parsing_error">Data parsing error</string>
    
    <string name="create_device">Let’s Create \n Your First Device</string>
    <string name="create_pebble">Create Pebble</string>
    <string name="device">Device</string>
    <string name="version">Version 1.0</string>
    <string name="gps">GPS</string>
    <string name="no_data">No data</string>
    <string name="loading">loading</string>
    <string name="success">Success</string>
    <string name="status">status:</string>
    <string name="tips_pebble">Your Meta-Pebble \n is here!</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="activate_device">Activate Device</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="ownership">Ownership</string>
    <string name="transfer_ownership">Transfer Ownership</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="transfer_ownership_tips">Transfer your \n activated \n Meta-Pebble to \n another wallet</string>
    <string name="prepare_tips">Preparing your \n Meta-Pebble ...</string>
    <string name="first_device_tips01">Get Started With</string>
    <string name="first_device_tips02">Your First Device</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="disconnect">Disconnect</string>
    <string name="select_nft_tips">Select a NFT to activate your device</string>
    <string name="activate_meta_pebble">Activate Meta-Pebble</string>
    <string name="no_nft">No NFTs yet</string>
    <string name="switch_wallet">Switch to Another Wallet</string>
    <string name="where_to_buy">Where to Buy</string>
    <string name="where_to_claim">Where to Claim</string>
    <string name="meta_pebble_nft">Meta-Pebble NFT</string>
    <string name="contract_address">Contract address</string>
    <string name="sign_wallet_label">Sign in your wallet</string>
    <string name="sign_wallet_tips">You have selected a NFT to activate Meta-Pebble. Please confirm in your wallet.</string>
    <string name="confirm">Confirm</string>
    <string name="from">From</string>
    <string name="recipient_address">To Recipient Address</string>
    <string name="please_enter">Please enter</string>
    <string name="transaction_prompt">You need to confirm this transaction in ioPay</string>
    <string name="download_iopay">Download ioPay</string>
    <string name="get_started">Get Started</string>
    <string name="meta_pebble_nfts">Meta-Pebble NFTs</string>
    <string name="update_tips">The latest version has upgraded the security and features of your MetaPebble.</string>
    <string name="update_now">Update Now</string>
    <string name="update_metapebble">Update your MetaPebble</string>
    <string name="meta_pebble">Meta-Pebble</string>
    <string name="activating_metapebble">Activating \n your Meta-Pebble \n ...</string>
    <string name="activating_tips">Activating Meta-Pebble</string>
    <string name="registering_metapebble">Registering \n your Meta-Pebble \n ...</string>
    <string name="activated_registered_successfully">Your Meta-Pebble has been \n successfully activated and \n registered!</string>
    <string name="completed">Completed!</string>
    <string name="authorize_to_pop">Authorize to POP</string>
    <string name="authorize_to_pop_underline"><u>Authorize to POP</u></string>
    <string name="back_to_home">Back to Home</string>
    <string name="external_link">Go to portal.machinefi.com to check more details about your device and have fun playing with the dApps there!</string>
    <string name="gps_precision">GPS Precision</string>
    <string name="gps_collection_interval">GPS Collection Interval</string>
    <string name="device_must_api_level">Sorry! The app is required to device Android 6.0 (API level 23) or higher</string>
    <string name="could_not_load_certificate">Could not load certificate!</string>
    <string name="approve">Approve</string>
    <string name="try_later">I will do it later</string>
    <string name="authorize_to_pop_tips_01">Authorize your Meta-Pebble GPS data to the POP Protocol to receive airdrops from various campaigns!</string>
    <string name="authorize_to_pop_tips_02">Receive airdrop from various campaigns!</string>
    <string name="authorize">Authorize</string>
    <string name="switch_caption">Turn on/off your Meta-Pebble to enable/disable data uploading and transmission.</string>
    <string name="disconnect_wallet">Disconnect your Wallet</string>
    <string name="disconnect_wallet_warning">Are you sure to disconnect your wallet now?</string>
    <string name="w3bstream_server">W3bStream Server</string>
    <string name="set_up_data_server">Set up data server</string>
    <string name="please_activate_pebble">Please activate MetaPebble</string>
    <string name="no_nft_yet">No NFTs yet</string>
    <string name="prompt_network">Make sure you are connecting the wallet in the IoTeX Network.</string>
    <string name="reset_default">Reset default</string>
    <string name="url_invalid">The url is invalid.</string>
    <string name="error">Error</string>
    <string name="connect_error">Unable to connect to your wallet. Please try again later</string>
    <string name="ok">OK</string>
    <string name="https_url">HTTPS URL</string>
    <string name="websocket_url">WEBSOCKET URL</string>
</resources>