<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <include
        android:id="@+id/mTitleBar"
        layout="@layout/include_bar" />

    <TextView
        android:id="@+id/mTvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTitleBar"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/space_grotesk_bold"
        android:gravity="center"
        android:lineHeight="45dp"
        android:text="@string/transfer_ownership_tips"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mLlPanel"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_decoration" />

    <LinearLayout
        android:id="@+id/mLlPanel"
        android:layout_width="315dp"
        android:layout_height="280dp"
        android:layout_below="@+id/mTvLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@mipmap/bg_square"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="26dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_bold"
            android:includeFontPadding="false"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mTvFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/space_grotesk_bold"
            android:includeFontPadding="false"
            android:textColor="@color/green_400"
            android:textSize="16sp"
            tools:text="iodhfiuehfioekpijdijjdifjioefi0ojkouio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/space_grotesk_bold"
            android:includeFontPadding="false"
            android:text="@string/recipient_address"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/bg_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEtInput"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/space_grotesk_bold"
                android:hint="@string/please_enter"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/green_400"
                android:textColorHint="@color/white_alpha_70"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/mIvScanner"
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_scanner" />

        </LinearLayout>

        <TextView
            android:layout_width="139dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_stroke_white_r100"
            android:fontFamily="@font/space_grotesk_bold"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/mTvTransactionPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mLlPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/space_grotesk_light"
        android:text="@string/transaction_prompt"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/mTvDownloadIopay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTvTransactionPrompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/space_grotesk_light"
        android:text="@string/download_iopay"
        android:textColor="@color/green_400"
        android:textSize="14sp" />

</RelativeLayout>