<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <include
        android:id="@+id/mTitleBar"
        layout="@layout/include_bar" />

    <TextView
        android:id="@+id/mTvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTitleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/space_grotesk_bold"
        android:gravity="center"
        android:lineHeight="41dp"
        android:text="@string/tips_pebble"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTvTips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/diamond_01" />

    <io.iotex.pebble.widget.MaterialSwitch
        android:id="@+id/mSwitch"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mFlConnect"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:checked="true"
        android:gravity="center_vertical"
        android:showText="true"
        android:switchTextAppearance="@style/SwitchTheme"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:thumb="@drawable/switch_rectangle_thumb_selector"
        android:track="@drawable/switch_rectangle_track_selector"
        app:secondaryTextColor="@color/white_alpha_30"
        app:secondaryTextSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:id="@+id/mFlConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp">

        <dev.pinkroom.walletconnectkit.WalletConnectButton
            android:id="@+id/mWcActivate"
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:background="@drawable/selector_stroke_btn"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:fontFamily="@font/space_grotesk_light"
            android:gravity="center"
            android:text="@string/activate_device"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </FrameLayout>

</RelativeLayout>