<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray_700"
    android:divider="@drawable/shape_gray_700_r6"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/mLlHistory"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_history" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/history"
            android:textColor="@color/gray_400"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLlAbout"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/about"
            android:textColor="@color/gray_400"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLlSetting"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings"
            android:textColor="@color/gray_400"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>