<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/mTitleBar"
        layout="@layout/include_bar" />

    <TextView
        android:id="@+id/mTvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTitleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/space_grotesk_bold"
        android:text="@string/your_wallet"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/mTvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTvLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/space_grotesk_bold"
        android:textColor="@color/green_400"
        android:textSize="24sp"
        tools:text="iodhfiuehfioekpijdiouio" />

    <ImageView
        android:id="@+id/mIvNft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mTvAddress"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/nft_thumb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mIvNft"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/space_grotesk_bold"
        android:text="@string/no_nft"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/mTvSwitchWallet"
        android:layout_width="315dp"
        android:layout_height="54dp"
        android:layout_above="@+id/mTvBuyNft"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_stroke_white_r100"
        android:fontFamily="@font/space_grotesk_bold"
        android:gravity="center"
        android:text="@string/switch_wallet"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mTvBuyNft"
        android:layout_width="315dp"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/shape_stroke_white_r100"
        android:fontFamily="@font/space_grotesk_bold"
        android:gravity="center"
        android:text="@string/switch_wallet"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>